--- a/Store Data with Sass Variables/style.scss
+++ b/Store Data with Sass Variables/style.scss
@@ -1,7 +1,10 @@
+/* One feature of Sass that's different than CSS is it uses variables. They are declared and set to store data, similar to JavaScript. In JavaScript, variables are defined using the let and const keywords. In Sass, variables start with a $ followed by the variable name. One example where variables are useful is when a number of elements need to be the same color. If that color is changed, the only place to edit the code is the variable value. */
+$text-color: red;
+
 .header {
   text-align: center;
 }
 .blog-post,
 h2 {
-  color: red;
+  color: $text-color;
 }
