--- a/02 - Nest CSS with Sass/style.css
+++ b/02 - Nest CSS with Sass/style.css
@@ -1,8 +1,38 @@
-h1 {
-  text-align: center;
+/* Sass allows nesting of CSS rules, which is a useful way of organizing a style sheet.
+
+Normally, each element is targeted on a different line to style it, like so:
+
+article {
+  height: 200px;
+}
+
+article p {
+  color: white;
+}
+
+article ul {
   color: blue;
 }
 
-p {
+For a large project, the CSS file will have many lines and rules. This is where nesting can help organize your code by placing child style rules within the respective parent elements:
+
+article {
+  height: 200px;
+
+  p {
+    color: white;
+  }
+
+  ul {
+    color: blue;
+  }
+}
+
+Use the nesting technique shown above to re-organize the CSS rules for both children of .blog-post element. For testing purposes, the h1 should come before the p element. */
+.blog-post h1 {
+  text-align: center;
+  color: blue;
+}
+.blog-post p {
   font-size: 20px;
 }/*# sourceMappingURL=style.css.map */
