--- a/06 - Use @each to Map Over Items in a List/style.scss
+++ b/06 - Use @each to Map Over Items in a List/style.scss
@@ -1,3 +1,19 @@
+/* The last challenge showed how the @for directive uses a starting and ending value to loop a certain number of times. Sass also offers the @each directive which loops over each item in a list or map. On each iteration, the variable gets assigned to the current value from the list or map.
+
+Write an @each directive that goes through a list: blue, black, red and assigns each variable to a .color-bg class, where the color part changes for each item to the respective color. Each class should set the background-color to the respective color as well. */
+
+$colors: (
+  color1: blue,
+  color2: black,
+  color3: red,
+);
+
+@each $key, $color in $colors {
+  .#{$color}-bg {
+    background-color: $color;
+  }
+}
+
 div {
   height: 200px;
   width: 200px;
