--- a/07 - Apply a Style Until a Condition is Met with @while/style.css
+++ b/07 - Apply a Style Until a Condition is Met with @while/style.css
@@ -1,1 +1,26 @@
-/*# sourceMappingURL=style.css.map */
+/* The @while directive is an option with similar functionality to the JavaScript while loop. It creates CSS rules until a condition is met.
+
+The @for challenge gave an example to create a simple grid system. This can also work with @while.
+
+Use @while to create a series of classes with different font-sizes.
+
+There should be 5 different classes from text-1 to text-5. Then set font-size to 15px multiplied by the current index number. Make sure to avoid an infinite loop! */
+.text-1 {
+  font-size: 15px;
+}
+
+.text-2 {
+  font-size: 30px;
+}
+
+.text-3 {
+  font-size: 45px;
+}
+
+.text-4 {
+  font-size: 60px;
+}
+
+.text-5 {
+  font-size: 75px;
+}/*# sourceMappingURL=style.css.map */
